# Eze-P

./: .clang-format  .clangd  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  build-with-mpich.sh  build-with-ompi.sh  build.sh  debug.cpp  dxcore_loader.cpp  events.cpp  globals.cpp  hsa.cpp  hsakmtmodel.cpp  install.sh  libdrm.cpp  libhsakmt.h  libhsakmt.ver  librocdxg.h  librocdxg.ver  memory.cpp  openclose.cpp  pc_sampling.cpp  perfctr.cpp  pm4_cmds.h  queues.cpp  registers.h  rocDecode-setup.py  rocJPEG-setup.py  rocm-fix.sh  run.sh  run_tests.sbatch  spm.cpp  svm.cpp  tests-with-mpich.sh  (+6 more)
emulation/mirage/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs
emulation/mirage/agents/: MI300X.json  MI350X.json
emulation/mirage/builtin/: Cargo.toml
emulation/mirage/cmake/: RocjitsuCorpus.cmake
emulation/mirage/container/: Cargo.toml
emulation/mirage/core/: Cargo.toml  build.rs
emulation/mirage/ctl/: Cargo.toml  README.md
emulation/mirage/daemon/: Cargo.toml
emulation/mirage/dashboard/: Cargo.toml  build.rs
emulation/mirage/docs/: aorta.md  architecture.md  building.md  cli.md  ddp-training.md  demo-debugging-at-scale.md  host.md  state-layout.md
emulation/mirage/host/: Cargo.toml
emulation/mirage/hotswap/: Cargo.toml  README.md
emulation/mirage/noop/: Cargo.toml
emulation/mirage/rocjitsu/: Cargo.toml  build.rs
emulation/mirage/rocjitsu_sys/: Cargo.toml
emulation/mirage/scripts/: mirage-docker-build.sh  mirage.sh
emulation/mirage/src/: main.rs
emulation/mirage/tests/: container_e2e.rs  daemon_e2e.rs  e2e.rs  emulator_benchmark.rs  lifecycle_e2e.rs  matrix.md  matrix_e2e.rs  ml_scenarios.rs  run_ddp_mlp_mi350.sh  run_opt125_onetoken.sh  run_rccl_smoke.sh  run_tiny_torch_mi350.sh  run_vllm_opt125m.sh  setup_aorta_venv.sh
emulation/rocjitsu/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  MAINTAINERS.md  README.md
experimental/rocjitsu/: .gitignore  CMakeLists.txt  LICENSE.md  README.md
profilers/profiler-hub/: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
projects/cuid/: .gitignore  .readthedocs.yaml  CMakeLists.txt  README.md
projects/hotswap/: CMakeLists.txt  hotswap.cpp  hotswap.hpp  hotswap_gfx_query.cpp  hotswap_gfx_query.hpp  hotswap_platform_io.hpp  hotswap_platform_io_posix.cpp  hotswap_platform_io_win.cpp  hotswap_tool.cpp
projects/perf-dkms/: CMakeLists.txt  Makefile  QUICKSTART.md  README.md  demo_perf_record.sh  dkms.conf  linux-kernel.patch  test_module.sh  test_pm4_integration.sh
projects/rccl/: .gitignore  .gitmodules  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  Makefile  NOTICES.txt  README.md  install.sh  toolchain-linux.cmake
projects/rocdecode/: .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  rocDecode-setup.py
projects/rocjpeg/: .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  README.md  rocJPEG-setup.py
projects/rocprof-trace-decoder/: .clang-format  .cmake-format.yaml  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.cfg
projects/rocr-debug-agent/: .gitattributes  .readthedocs.yaml  CMakeLists.txt  README.md
python/rocm-bootstrap/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
shared/kpack/: CMakeLists.txt  LICENSE  pyproject.toml
src/: CMakeLists.txt  Makefile  agent.cpp  agent.h  all_gather.cu  all_reduce.cu  architecture.cpp  architecture.h  assembly.hpp  backend_bc.cpp  backend_bc.hpp  backend_type.hpp  broadcast.cu  collectives.cc  common.cu  common.h  commons.h  context.hpp  context_device.cpp  context_host.cpp  context_incl.hpp  context_tmpl_device.hpp  context_tmpl_host.hpp  debug_agent.cpp  dev_runtime.cc  enqueue.cc  envvar.cpp  envvar.hpp  event.cpp  gather.cu  init.cc  ipc_policy.cpp  ipc_policy.hpp  logging.cpp  logging.h  memory.cpp  memory.h  mpi_instance.cpp  mpi_instance.hpp  os_driver.cpp  (+25 more)
src/aca-decode/: aca_fields.c  aca_tables.c  error_map.c
src/amd_smi/: amd_smi.cc  amd_smi_cper.cc  amd_smi_drm.cc  amd_smi_gpu_device.cc  amd_smi_socket.cc  amd_smi_system.cc  amd_smi_utils.cc  fdinfo.cc  scoped_fd.cc
src/bit_stream_reader/: es_reader.cpp  es_reader.h  roc_bs_reader_api.cpp
src/bootstrap/: socket.cpp  utils.cpp
src/containers/: array_impl.hpp  share_strategy.cpp
src/device/: common.h  generate.py  prims_ll.h  prims_ll128.h  prims_simple.h
src/gda/: CMakeLists.txt  backend_gda.cpp  backend_gda.hpp  context_gda_device.cpp  context_gda_device.hpp  context_gda_device_coll.cpp  context_gda_host.cpp  context_gda_host.hpp  context_gda_tmpl_device.hpp  debug_gda.hpp  gda_context_proxy.hpp  gda_team.cpp  gda_team.hpp  ibv_wrapper.cpp  queue_pair.cpp  queue_pair.hpp  segment_builder.cpp  segment_builder.hpp  topology.cpp
src/graph/: topo.h  tuning.cc
src/host/: host.cpp  host.hpp  host_helpers.hpp  host_templates.hpp
src/include/: api_trace.h  comm.h  device.h  nccl_common.h  rccl_common.h  rccl_vars.h
src/ipc/: backend_ipc.cpp  context_ipc_device.cpp  context_ipc_host.cpp  context_ipc_host.hpp  context_ipc_tmpl_device.hpp  context_ipc_tmpl_host.hpp  ipc_team.cpp
src/memory/: dlmalloc.cpp  single_heap.hpp  symmetric_heap.hpp  window_info.hpp
src/parser/: av1_defines.h  av1_parser.cpp  av1_parser.h  avc_parser.cpp  hevc_parser.cpp  roc_video_parser.cpp  rocparser_api.cpp  vp9_parser.cpp
src/plugin/: net.cc
src/ras-decode/: aca_decode.c  aca_fields.c  boot_decode.c  error_map.c  json_printer.c  json_util.c  main.c  ras_decode_api.c
src/reverse_offload/: backend_ro.cpp  context_ro_device.cpp  context_ro_device.hpp  context_ro_host.cpp  context_ro_host.hpp  mpi_transport.cpp  queue.hpp  queue_proxy.hpp  window_proxy.hpp
src/rocdecode/: roc_decoder.h  rocdecode_api.cpp
src/rocdecode-host/: CMakeLists.txt  dec_handle_host.h  roc_decoder_host.cpp  roc_decoder_host.h  rocdecode_host_api.cpp
src/rocm-systems/: .pre-commit-config.yaml
src/sync/: abql_block_mutex.hpp
src/transport/: net.cc  net_ib.cc
(+12202 files in other folders)
